--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div id="MBox">
 		<div id="content">
-			<h1 id="title">猫猫二重奏手机触摸测试版，目前只能控制P1</h1>
+			<h5 id="title">猫猫二重奏手机触摸测试版，目前只能控制P1</h5>
 
 			<!-- 内容面板 -->
 			<div id="gameCbox">
@@ -48,6 +48,7 @@
 	</div>
 </body>
 <script src="js/pulic.js"></script>
+<script src="js/Filedispose.js"></script>
 <script src="js/elementDraw.js"></script>
 <script src="js/control.js"></script>
 <script>
